2007-03-25	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/xfce-menu.c: Fix weird typo as noted by
	  Jens Luedicke.

2007-03-24	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/Makefile.am, libxfce4menu/xfce-menu.c, 
	  libxfce4menu/xfce-menu-monitor.{c,h}: Add monitoring support
	  by making it possible for library clients to define a vtable
	  with functions to be called whenever monitoring a file or
	  directory becomes necessary. This way Thunar and xfdesktop
	  can use ThunarVFS for monitoring and I don't need to care
	  about how they do it. Note: xfce_menu_monitor_notify_change()
	  is missing but will be adedd as soon as possible.
	  Add a missing NULL to g_strjoin() in xfce-menu.c as reported
	  by Jens Luedicke.
	* tests/test-display-menu.c: Add some dummy code for testing
	  the monitoring system.
	* docs/reference/: Updated and reorganized API docs.

2007-03-23	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/*.c: Remove gettext calls for strings
	  we don't really need to translate. Add gettext calls
	  were it makes sense. Remove several debug messages.

2007-03-23	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/libxfce4menu.h, libxfce4menu/Makefile.am, 
	  libxfce4menu/xfce-menu-element.{c,h}: XfceMenuElement 
	  interface with methods xfce_menu_element_get_name() and 
	  xfce_menu_element_get_icon_name() added. 
	* libxfce4menu/xfce-menu.c, libxfce4menu/xfce-menu-item.c, 
	  libxfce4menu/xfce-menu-separator.c: Add XfceMenuElementIface
	  to XfceMenu, XfceMenuItem and XfceMenuSeparator. Rename
	  xfce_menu_get_layout_items() to 
	  xfce_menu_get_layout_elements().
	* tests/test-display-menu.c: Use XfceMenuElement methods
	  where possible.

2007-03-23	Jannis Pohlmann <jannis@xfce.org>

	* tests/Makefile.am, tests/test-display-menu.c: Test program
	  for displaying a menu added again.

2007-03-23	Jannis Pohlmann <jannis@xfce.org>

	* docs/reference/tmpl/: Remove tdb related files from
	  SVN. They won't be installed to the system anyway.